Limpieza completa y optimización del proyecto
 Cambios principales:
- Eliminar scripts de migración obsoletos (14 archivos)
- Eliminar documentación duplicada (5 archivos MD)
- Agregar enlace a Google Drive en README
- Crear README en carpeta model/ con instrucciones
- Optimizar .gitignore (excluir backups y temps)
- Mejorar estructura documentada del proyecto
- Documentar nombres de archivos únicos en minería

 Archivos eliminados:
- cleanup_database.py, migrate_to_supabase.py
- fix_annotations_csv/json.py, generate_metadata_csv.py
- import_missing_metadata.py, rename_images.py
- sync_supabase_urls.py, upload_all_to_supabase.py
- upload_to_supabase_storage.py, validate_structure.py
- ARQUITECTURA.md, CAMBIOS_TRAINING.md, CHANGELOG.md
- DEPLOYMENT.md, INSTRUCCIONES_MINADO.md

 Proyecto optimizado:
- Solo archivos esenciales
- Documentación clara y unificada
- Google Drive para modelos pre-entrenados
- Nombres de archivos sin conflictos (timestamp único)

--- a/.gitignore
+++ b/.gitignore
@@ -39,10 +39,16 @@ data/mining/images/
 *.gif
 *.avif
 
-# Model files
+# Model files (descargar desde Google Drive)
 model/*.pth
 model/checkpoints/*.pth
 !model/.gitkeep
+
+# Backups y archivos temporales
+*.backup.*
+*.tmp
+*.temp
+data/mining/*.backup.*
 
 # Logs
 *.log
