Agregar backup de base de datos Supabase en CSV
 Backup completo de Supabase:
- image_metadata.csv (987 registros)
- annotations.csv (227 anotaciones)
- deleted_images.csv (vacía)

 Script: download_supabase_to_csv.py
- Descarga automática de todas las tablas
- Formato CSV para fácil lectura
- Listo para versionado en GitHub

 Actualizado .gitignore:
- Permitir CSVs en data/supabase_backup/
- Mantener exclusión de imágenes grandes

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,9 @@ data/mining/images/
 *.gif
 *.avif
 
+# Permitir CSVs de backup de Supabase
+!data/supabase_backup/*.csv
+
 # Model files (descargar desde Google Drive)
 model/*.pth
 model/checkpoints/*.pth
